# egui-fractal

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  wrap_app.rs
src/apps/: julia_set.rs  mod.rs
